# proddata

./: CMakeLists.txt  README.md  project.config
docs/: CMakeLists.txt  doxyfile_external.in  doxyfile_internal.in  mainpage.dox  otp_layout.dox  proddata.vpp
inc/: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  device_data.cc  device_data.h  flash_access.cc  flash_access.h  main.cc  mtd_access.cc  mtd_access.h  proddata.cc  proddata.h  test_proddata.sh  userotp_access.cc  userotp_access.h  vector_operations.cc  vector_operations.h  wifi_cal.sh
utest/: CMakeLists.txt  flash_access_mock.h  test_device_data.h
